fix: update FullScreenNav layout and styling for improved visibility

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body{
     overflow-x:hidden;
 }
 
+
 .moveX{
     /* animation: moveAnimation 10 infinite linear; */
     animation-name: moveAnimation;
@@ -22,6 +23,17 @@ body{
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 }
+
+.moveLink{
+    opacity: 0;
+    transition: ALL ease 0.3S;
+}
+
+.link:hover .moveLink{
+    opacity: 1;
+
+}
+
 
 @keyframes moveAnimation {
     from {
